ajout des fichier 1-text-completion

--- a/fichiers_exercices/1-text-completion/final/.env.example
+++ b/fichiers_exercices/1-text-completion/final/.env.example
@@ -1,2 +1,1 @@
-REACT_APP_OPENAI_API_KEY="<YOUR-API-KEY>"
-# remplacer avec votre clé API: https://platform.openai.com/account/api-keys
+REACT_APP_OPENAI_API_KEY=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
