--- a/fichiers_exercices/1-text-completion/starter/.env.example
+++ b/fichiers_exercices/1-text-completion/starter/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_OPENAI_API_KEY="<YOUR-API-KEY>"
+REACT_APP_OPENAI_API_KEY=<<"your Api>>
 # remplacer avec votre clé API: https://platform.openai.com/account/api-keys
